Fixed overflow issue if server name is stupidly long

--- a/app/assets/stylesheets/app_container/guild_channels_index.scss
+++ b/app/assets/stylesheets/app_container/guild_channels_index.scss
@@ -54,6 +54,7 @@
   height: 3rem;
   width: 100%;
   border-bottom: 1px solid #232329;
+  overflow: hidden;
 }
 
 .channel-index-title {
